style: added max-width to prevent unnecessary overflow

--- a/input.css
+++ b/input.css
@@ -7,3 +7,7 @@
     "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
     sans-serif;
 }
+
+body {
+  max-width: 100%;
+}
