--- a/output.css
+++ b/output.css
@@ -2123,6 +2123,11 @@ video {
   background-color: rgb(0 26 82 / var(--tw-bg-opacity));
 }
 
+.bg-red-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}
+
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -2924,6 +2929,10 @@ video {
   font-family: "Mulish", system-ui, -apple-system, BlinkMacSystemFont,
     "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
     sans-serif;
+}
+
+body {
+  max-width: 100%;
 }
 
 @media (min-width: 480px) {
